rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax13/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A {
		default native void m() { 
			
		} 
	}
}